--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<<device-width>>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors Game</title>
 </head>
 <body>
+    <h1>Rock Paper Scissors Game</h1>
+
+    <div>
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="Scissors">Scissors</button>
+    </div>
+
+    <p id="result"></p>
+    <p>Human Score: <span id="humanScore">0</span></p>
+    <p>Computer Score: <span id="computerScore">0</span></p>
+    
     <script src="script.js"></script>
 </body>
 </html>
