div result added

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
         <button id="Scissors">Scissors</button>
     </div>
 
+    <div id="result">Make your move!</div>
+
     <p id="result"></p>
     <p>Human Score: <span id="humanScore">0</span></p>
     <p>Computer Score: <span id="computerScore">0</span></p>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
