--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
         <button id="Scissors">Scissors</button>
     </div>
 
-    <div id="result">Make your move!</div>
-
-    <p id="result"></p>
-    <p>Human Score: <span id="humanScore">0</span></p>
-    <p>Computer Score: <span id="computerScore">0</span></p>
+    <div id="result"></div>
+    <div id="score"></div>
 
     <script src="script.js"></script>
 </body>
